# vs

./: LICENSE  README.md  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: build-windows.yml
vai/: .env  app.py
vai/templates/: index.html
vc/: .env  .gitignore  auth_setup.py  index.html  package-lock.json  package.json  s.py  vite.config.js
vc/server/: .env  package-lock.json  package.json  payuBackend.js
vc/src/: App.jsx  index.css
vs/: build.py
vs/v/: build.py
vs/vyaparsetu-workspace/: README.md  package-lock.json  package.json
vweb/: .gitignore  index.html  package-lock.json  package.json  setup.py  vite.config.js
vweb/backend/: main.py
vweb/src/: App.jsx  index.css
vyaparsetu-desktop/: .env  .firebaserc  .gitignore  electron-builder.yml  firestore.indexes.json  firestore.rules  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
vyaparsetu-desktop/electron/: main.js  preload.js
vyaparsetu-desktop/src/: App.jsx  emailjs.config.js  firebase.js  index.css  main.jsx
vyaparsetu-desktop/src-tauri/: Cargo.toml  tauri.conf.json
vyaparsetu-desktop/src-tauri/capabilities/: default.json
vyaparsetu-desktop/src-tauri/src/: database.rs  main.rs  sync.rs
vyaparsetu-desktop/src-tauri/src/commands/: billing_cmd.rs  inventory_cmd.rs  khata_cmd.rs
vyaparsetu-desktop/src-tauri/src/db/: core.rs  schema.rs
vyaparsetu-master/: vyaparsetu_builder.py
vyaparsetu-workspace/: vyaparsetu_builder.py
vyaparsetu-workspace/client/: index.html  package-lock.json  package.json
vyaparsetu-workspace/server/: .env  (+2 more)
(+361 files in other folders)
